Add stub for donation alerts
